--- a/index.html
+++ b/index.html
@@ -3,23 +3,10 @@
 
 	<head>
 
-    <title>WebRTC - Plugin jQuery</title>
+		<title>WebRTC - Plugin jQuery</title>
 
-    <!-- Stylesheet Ressources -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-
-    <!-- JavaScript Ressources -->
-    <script src="js/jquery-1.7.1.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/jquery-webrtc.js" type="text/javascript" charset="utf-8"></script>
-
-    <!-- Plugin jQuery - webRTC -->
-    <script type="text/javascript">
-      $(function() {
-          conversation = $('#conversation').createWebrtc();
-      });
-    </script>
-
+		<!-- Stylesheet Ressources -->
+		<link rel="stylesheet" href="css/bootstrap.css">
 	</head>
 
 	<body>
@@ -28,28 +15,38 @@
 
 			<div id="conversation" class="row-fluid">
 
-				  <!-- Local Video -->
-            <div class="span6">
-                <h2 align="left">Local</h2>
-                <div id="local"></div>
-            </div>
-          <!-- End of Local Video -->
+					<!-- Local Video -->
+						<div class="span6">
+								<h2 align="left">Local</h2>
+								<div id="local"></div>
+						</div>
+					<!-- End of Local Video -->
 
-          <!-- Remote Video -->
-            <div class="span6">
-                <h2 align="left">Remote</h2>
-                <div id="remote"></div>
-            </div>
-          <!-- End of Remote Video -->
+					<!-- Remote Video -->
+						<div class="span6">
+								<h2 align="left">Remote</h2>
+								<div id="remote"></div>
+						</div>
+					<!-- End of Remote Video -->
 
-      </div>
+			</div>
 
 		</div>
 
-    <div class="row-fluid">
-      <center><div id="status"></div></center>
-    </div>
-
+		<!-- JavaScript Ressources -->
+		<script src="js/jquery-1.7.1.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/webrtc.io.js" type="text/javascript" charset="utf-8"></script>
+		<script>
+			rtc.createStream({"video": true, "audio":true}, function(stream){
+					// get local stream for manipulation
+					rtc.attachStream(stream, "local");
+			});
+			rtc.connect('ws://10.0.3.62:8080');
+			rtc.on('ready', function() {
+			    // all streams are loaded
+			  });
+		</script>
 	</body>
 
 </html>
